--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,23 @@
 <resources>
     <string name="app_name">GrupalSemana2</string>
-    <string name="pick_date">Fecha</string>
+    <string name="txtViewFecha">Fecha</string>
+    <string name="txtViewResumen">Resumen</string>
+    <string name="txtViewEquipamiento">Equipamiento</string>
+    <string name="txtViewEstacionDeMuestreo">Estacion de Muestreo</string>
+    <string name="txtViewMetodoDeMuestreo">Metodo de Muestreo</string>
+    <string name="txtViewUbicacion">Ubicacion</string>
+    <string name="txtViewZona">Zona</string>
+    <string name="txtViewRegion">Region</string>
+    <string name="txtViewDepartamento">Departamento</string>
+    <string name="txtViewLocalidad">Localidad</string>
+    <string name="txtViewFormulario">Formulario</string>
+    <string name="title_activity_mostrar_actividad_de_campo">MostrarActividadDeCampo</string>
+    <!-- Strings used for fragments for navigation -->
+    <string name="first_fragment_label">First Fragment</string>
+    <string name="second_fragment_label">Second Fragment</string>
+    <string name="next">Next</string>
+    <string name="previous">Previous</string>
+
+    <string name="hello_first_fragment">Hello first fragment</string>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 </resources>
